알맹이 빼고 완성

--- a/portfolio/src/components/Project.css
+++ b/portfolio/src/components/Project.css
@@ -1,18 +1,21 @@
 .project {
     width: 100vw;
     height: 100vh;
-    background-color: black;
+    background-color: white;
     color:white;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     font-size: 4rem;
     
 }
 
 .project-title {
     width: 100vw;
-    height: 20vh;
+    height: 30vh;
     font-size: 4rem;
-    color: white;
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,8 +26,7 @@
     justify-content: center;
     align-items: flex-end;
     width: 100vw;
-    height: 40vh;
-    margin-top: 0%;
+    height: 60vh;
 }
 
 .div-project2 {
