--- a/portfolio/src/components/Github.css
+++ b/portfolio/src/components/Github.css
@@ -9,3 +9,13 @@
     border-radius: 4px;
 }
 
+.github-inner {
+    background-color: white;
+    color : black;
+    width : 8vw;
+    height: 4vh;
+    text-align : center;
+    margin-right: 10vw;
+}
+
+
